# crossdapp-passkey-portal

./: LICENSE  README.md
Desktop/OrbitPass/: README.md
Desktop/OrbitPass/frontend/: package-lock.json  tailwind.config.ts
Desktop/OrbitPass/sdk/: README.md
Downloads/PREDICTIFY_myVersion 2/: README.md
backend/: server.js
contracts/: Cargo.toml  README.md
contracts/src/: lib.rs  smart_wallet.rs
contracts/test_snapshots/test/: test_execute_transaction.1.json  test_initialize.1.json  test_set_policy.1.json
docs/: README.md  architecture.md
docs/api/: README.md
docs/contracts/: README.md
docs/integration/: README.md
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx
frontend/app/demo/: page.tsx
frontend/app/demo/token-swap/: page.tsx
frontend/backend/: launchtube.js  package-lock.json  package.json
frontend/contracts/orbitpass/: Cargo.toml
frontend/contracts/orbitpass/contracts/orbitpass/: Cargo.toml
frontend/contracts/orbitpass/contracts/orbitpass/src/: lib.rs  test.rs
frontend/scripts/: capture-screenshots.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/demo/: page.tsx
frontend/src/app/demo2/: page.tsx
frontend/src/app/docs/: page.tsx
frontend/src/components/: AnimatedBackground.tsx  Architecture.tsx  Demos.tsx  Features.tsx  Footer.tsx  Navbar.tsx  ProblemSolution.tsx  Team.tsx  TechDocs.tsx  TechStack.tsx
frontend/src/lib/: passkey.ts  passkeyKitSimple.ts  smartWalletClient.ts  utils.ts  wallet.ts
sdk/: README.md
tools/launchtube-main/: worker-configuration.d.ts
(+11 files in other folders)
