[workspace]
members = ["contracts/orbitpass"]

[workspace.dependencies]
soroban-sdk = "22.0.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
